# meddoc-query-engine

./: .gitignore  Dockerfile  README.md  pyproject.toml  retreival_map.md  strategy.md
app/api/: main.py
app/api/routes/: extract.py  index.py  ingest.py  retrieve.py
app/core/: __init__.py  chunking.py  config.py  embedding.py  exceptions.py  extracting.py  indexing.py  models.py  pinecone.py  pipelines.py  prompting.py  prompts.py  retreival.py
app/db/: __init__.py  base.py  models.py
app/hierarchical_rag/: __init__.py  generator.py  indexer.py  prompts.py  retreiver.py
app/hierarchical_rag/models/: models.py
app/hierarchical_rag/modules/: generator.py  indexer.py  prompts.py  retreiver.py
app/hierarchical_rag/pipelines/: generator.py  indexer.py  retreiver.py
app/workflows/: __init__.py  extract.py  generate.py  index.py  ingest.py  retreive.py  retrieve.py
