[project]
name = "meddoc-query-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "fitz>=0.0.1.dev2",
    "openai>=1.88.0",
    "pdfplumber>=0.11.7",
    "pinecone>=7.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
